--- a/SeleniumQuiz/Report/dashboard.html
+++ b/SeleniumQuiz/Report/dashboard.html
@@ -50,7 +50,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">10/5/2022 11:13:05 PM</span>
+                    <span class="badge badge-primary">10/6/2022 11:01:37 AM</span>
                 </a>
             </li>
         </ul>
@@ -140,7 +140,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">10/5/2022 11:13:05 PM</h6>
+													<h6 class="font-weight-light">10/6/2022 11:01:37 AM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -156,7 +156,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">10/5/2022 11:13:13 PM</h6>
+													<h6 class="font-weight-light">10/6/2022 11:02:09 AM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -172,7 +172,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Duration</p>
-													<h6 class="font-weight-light">00:00:15.3339290</h6>
+													<h6 class="font-weight-light">00:00:42.2267351</h6>
 													<span class="text-semibold font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -237,7 +237,7 @@
 			};
 		</script>
 			<script>
-				var timeline = { "T6_signup with register user":0 };
+				var timeline = { "T1_Register User":0 };
 			</script>
 		<script type='text/javascript'>
 	
