--- a/SeleniumQuiz/Report/index.html
+++ b/SeleniumQuiz/Report/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">10/6/2022 11:01:37 AM</span>
+                    <span class="badge badge-primary">10/6/2022 11:11:23 AM</span>
                 </a>
             </li>
         </ul>
@@ -121,18 +121,18 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">T1_Register User</p> 
+													<p class="name">T2_verify subscription</p> 
 													<p class="duration text-sm">0h:0m:0s+000ms</p> 
-													<span class="datetime">11:01:37 AM</span>
+													<span class="datetime">11:11:23 AM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">T1_Register User</h5>
-															<span class='badge badge-success'>10/6/2022 11:01:37 AM</span>
-															<span class='badge badge-danger'>10/6/2022 11:01:37 AM</span>
+															<h5 class="test-status text-pass">T2_verify subscription</h5>
+															<span class='badge badge-success'>10/6/2022 11:11:23 AM</span>
+															<span class='badge badge-danger'>10/6/2022 11:11:23 AM</span>
 															<span class='badge badge-default'>0h:0m:0s+000ms</span>
 														</div>
 																											</div>
